--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
              <div class="collapse navbar-collapse" id="demo-navbar-collapse">
                <ul class="nav navbar-nav">
                  <li class="active"><a href="#">Home</a></li>
-                 <li><a href="#">About</a></li>
-                 <li><a href="#">Contact</a></li>
+                 <li class="active"><a href="#">About</a></li>
+                 <li class="active"><a href="#">Contact</a></li>
 
                </ul>
                <form class="navbar-form navbar-left pull-right" role="search">
@@ -55,9 +55,9 @@
 
             Waterfalls at the back of Waipiʻo Valley
             Waipiʻo Valley is a valley located in the Hamakua District of the Big Island of Hawaiʻi. "Waipiʻo" means "curved water" in the Hawaiian language.[1]
-              <img src="images/IMG_0505.jpg" alt="view of hawaii coatline" />
+              <img src="images/hamakuacoast.jpg" alt="view of hawaii coatline" />
             It was the capital and permanent residence of many early Hawaiian aliʻi (kings) up until the time of King ʻUmi. A place celebrated for its nioi tree (Eugenia reinwardtiana) known as the "Nioi wela o Paʻakalana" (The burning Nioi of Paʻakalana). It was the location of the ancient grass palace of the ancient kings of Hawaii with the nioi stands. Kahekili II raided Waipiʻo in the 18th century and burned the four sacred trees to the ground.
-              <img src="images/IMG_0008.jpg" alt="taro patches" />
+              <img src="images/road.jpg" alt="road into waipio valley" />
             The valley floor at sea level is almost 2,000 ft (610 m) below the surrounding terrain. A steep road leads down into the valley from a lookout point located on the top of the southern wall of the valley. The road gains 800 vertical feet (243.84 m) in 0.6 miles (0.9 km) at a 25% average grade, with steeper grades in sections. This is a paved public road but it is open only to 4 wheel drive vehicles. It is the steepest road of its length in the United States [2] and possibly the world. The shore line in the valley is a black sand beach, popular with surfers. A few taro farms are located in the valley. Several large waterfalls fall into the valley to feed the river which flows from the foot of the largest falls at the back of the valley out to the ocean.[3]
               <img src="images/twinfalls.jpg" alt="twin waterfalls of waipio valley" />
             A foot trail called Waimanu or Muliwai Trail leads down a steep path to the Waimanu Valley, which is not accessible by automobile. At upper end of the valley, Waimanu Gap at 2,089 feet (637 m) elevation leads to the south end of Waimanu Valley.[4]</p>
