--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>WAIPIO VALLEY INFO</title>
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
 
  <!--  Header Section-->
      <div class="row header">
@@ -18,7 +19,7 @@
          <h1>WAIPIO VALLEY INFORMATION</h1>
        </div>
      </div>
-
+   </div>
      <div class="row navigation-bar">
          <nav class="navbar navbar-default" role="navigation">
            <div class="container-fluid">
@@ -67,10 +68,10 @@
           <p>In Hawaiian mythology, Mauna Kea was the home of snow goddess Poliʻahu, and the place of several other legends.Many small communities sprang up around sugarcane plantations which were operating along the Hāmākua Coast through most of the 20th century. The demand for sugar cane rose after the Reciprocity Treaty of 1875 reduced tariffs to the United States. The first mill processed the crop planted in 1876. Early investors included Claus Spreckles, Samuel Parker, and Theophilus Harris Davies. The Hāmākua Mill Company, Honokaʻa Sugar, Kaiwiki Sugar, Kukaiau Plantation Company, Laupāhoehoe Sugar, Paʻauhau Sugar Plantation and Pacific Sugar Mill were eventually consolidated into the Hāmākua Sugar Company.
             The Hāmākua district was an endemic region of bubonic plague in the early part of the 20th century. From 1910 to 1949, there were 112 confirmed cases of the disease, of which 109 were fatal. The Board of Health of the Territory of Hawaii, in combined efforts with the local sugar plantations, engaged in a vast rat extermination campaign. Despite these efforts, plague remained an enzootic disease in the region up until 1957. It is unclear why plague eventually left the area.
             Sugar plantations declined and were consolidated in the latter half of the 20th century. About 10% of the population was lost each decade following 1970. The Hamakua Sugar Company had its final harvest in 1994. After years of high unemployment, the economy shifted to small diversified farms. Crops include macadamia nuts, papaya, mango, coffee, and other tropical fruits. Irrigation canals known as the Upper Hamakua Ditch and Lower Hamakua Ditch had been built in 1910, and were repaired in 2001.
-            While virtually all of the pre-existing native forest below altitudes of several thousand feet was removed by sugarcane cultivation, several remnants of native forest can be found. Where the terrain of gulches such as Laupāhoehoe, Ka'awali'i, and Maulua was too steep for cultivation, for example, the original forest remains largely intact. There are also protected areas such as Kalōpā State Recreation Area, which has preserved a small stand of native trees and their understory compatriots. Other protected areas include the Hamakua, Hauola, Manowaialee, and Mauna Kea State Forest Reserves, Hakalau Forest National Wildlife Refuge,[20] and Mauna Kea Ice Age Reserve, all on Mauna Kea, and the Mauna Loa Forest Preserve on Mauna Loa.
+            While virtually all of the pre-existing native forest below altitudes of several thousand feet was removed by sugarcane cultivation, several remnants of native forest can be found. Where the terrain of gulches such as Laupāhoehoe, Ka'awali'i, and Maulua was too steep for cultivation, for example, the original forest remains largely intact. There are also protected areas such as Kalōpā State Recreation Area, which has preserved a small stand of native trees and their understory compatriots. Other protected areas include the Hamakua, Hauola, Manowaialee, and Mauna Kea State Forest Reserves, Hakalau Forest National Wildlife Refuge, and Mauna Kea Ice Age Reserve, all on Mauna Kea, and the Mauna Loa Forest Preserve on Mauna Loa.
               <img src="images/maunakea.jpg" alt="snow covered mauna kea mountain" />
             <p>Monument to deaths in the 1946 tsunami at Laupāhoehoe
-            The Hawaii Consolidated Railway was extended to connect the Hāmākua sugarcane plantations to the harbor at Hilo Bay. On April 1, 1946 a tsunami caused by an Aleutian Islands earthquake damaged the railroad so much it abandoned its tracks. Several years later the state of Hawaii acquired the right-of-way, and by 1960 realigned the Hawaii Belt Road (Route 19, known as the Māmalahoa Highway) to shorten the driving time.[23] In many places the older highway (Old Māmalahoa Highway) follows a more scenic, but twisted route that resembles the more well-known Road to Hana on Maui.</p>
+            The Hawaii Consolidated Railway was extended to connect the Hāmākua sugarcane plantations to the harbor at Hilo Bay. On April 1, 1946 a tsunami caused by an Aleutian Islands earthquake damaged the railroad so much it abandoned its tracks. Several years later the state of Hawaii acquired the right-of-way, and by 1960 realigned the Hawaii Belt Road (Route 19, known as the Māmalahoa Highway) to shorten the driving time. In many places the older highway (Old Māmalahoa Highway) follows a more scenic, but twisted route that resembles the more well-known Road to Hana on Maui.</p>
 
             Popular recreation sites along the Māmalahoa Highway include Akaka Falls, Umauma Falls, Hawaii Tropical Botanical Garden, World Botanical Gardens and Kolekole Beach Park.
             The Saddle Road (Route 200) travels from Hilo through the inland part of the district, providing access to the high plateau between Mauna Loa and Mauna Kea, and roads to the astronomical observatories on the summit of Mauna Kea and the NOAA observatory high on Mauna Loa. The US military conducts live-fire training at the Pohakuloa Training Area along this road.</p>
