fix font and test text color

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>WAIPIO VALLEY INFO</title>
   </head>
   <body>
+
     <div class="container">
-      <div class="jumbotron">
+        <div class="jumbotron">
 
  <!--  Header Section-->
      <div class="row header">
@@ -73,7 +74,7 @@
             <p>Monument to deaths in the 1946 tsunami at Laupāhoehoe
             The Hawaii Consolidated Railway was extended to connect the Hāmākua sugarcane plantations to the harbor at Hilo Bay. On April 1, 1946 a tsunami caused by an Aleutian Islands earthquake damaged the railroad so much it abandoned its tracks. Several years later the state of Hawaii acquired the right-of-way, and by 1960 realigned the Hawaii Belt Road (Route 19, known as the Māmalahoa Highway) to shorten the driving time. In many places the older highway (Old Māmalahoa Highway) follows a more scenic, but twisted route that resembles the more well-known Road to Hana on Maui.</p>
 
-            Popular recreation sites along the Māmalahoa Highway include Akaka Falls, Umauma Falls, Hawaii Tropical Botanical Garden, World Botanical Gardens and Kolekole Beach Park.
+            <p>Popular recreation sites along the Māmalahoa Highway include Akaka Falls, Umauma Falls, Hawaii Tropical Botanical Garden, World Botanical Gardens and Kolekole Beach Park.
             The Saddle Road (Route 200) travels from Hilo through the inland part of the district, providing access to the high plateau between Mauna Loa and Mauna Kea, and roads to the astronomical observatories on the summit of Mauna Kea and the NOAA observatory high on Mauna Loa. The US military conducts live-fire training at the Pohakuloa Training Area along this road.</p>
                    </div>
        <div class="col-md-4 col-sm-6">
