--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <!--  Header Section-->
      <div class="row header">
        <div class="col-xs-12 text-center">
-         <h1><em>WAIPIO VALLEY INFORMATION</em></h1>
+         <h1><strong>WAIPIO VALLEY INFORMATION</strong></h1>
        </div>
      </div>
    </div>
